tests/baselines/reference/staticInstanceResolution5.errors.txt
staticInstanceResolution5_0.ts(3,9): error TS2322: Type 'null' is not assignable to type 'Promise'.
staticInstanceResolution5_1.ts(4,14): error TS2709: Cannot use namespace 'WinJS' as a type.
staticInstanceResolution5_1.ts(5,23): error TS2709: Cannot use namespace 'WinJS' as a type.
staticInstanceResolution5_1.ts(6,16): error TS2709: Cannot use namespace 'WinJS' as a type.


==== staticInstanceResolution5_1.ts (3 errors) ====
    import WinJS = require('./staticInstanceResolution5_0');
    
    // these 3 should be errors
    var x = (w1: WinJS) => { };
                 ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    var y = function (w2: WinJS) { }
                          ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    function z(w3: WinJS) { }
                   ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    
==== staticInstanceResolution5_0.ts (1 errors) ====
    export class Promise {
        static timeout(delay: number): Promise {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Promise'.
        }
    }
    